# NEMO-Source-Tracker

./: .buildinfo  .gitignore  README.md  cli.html  genindex.html  gui.html  index.html  installation.html  methodology.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  results.html  search.html  searchindex.js
.doctrees/: cli.doctree  gui.doctree  index.doctree  installation.doctree  methodology.doctree  quickstart.doctree  results.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/nemo/: index.doctree
.doctrees/autoapi/nemo/denoise/: index.doctree
.doctrees/autoapi/nemo/detect/: index.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/nemo/: detect.html  track.html  utils.html
_modules/nemo/gui/: analysis.html  app.html  card.html  dialogs.html  loaders.html  viewers.html
_sources/: cli.rst  gui.rst  installation.rst  methodology.rst
_sources/autoapi/: index.rst
_sources/autoapi/nemo/: index.rst
autoapi/: index.html
autoapi/nemo/: index.html
autoapi/nemo/denoise/: index.html
autoapi/nemo/detect/: index.html
autoapi/nemo/gui/: index.html
autoapi/nemo/track/: index.html
autoapi/nemo/utils/: index.html
docs/: Makefile  conf.py  index.rst  methodology.rst  quickstart.rst  results.rst
notebooks/: w2246_ALMA.ipynb
src/nemo/: __init__.py  __main__.py  detect.py  gui.py  track.py
src/nemo/gui/: __init__.py  __main__.py  _constants.py  analysis.py  app.py  card.py  dialogs.py  loaders.py  viewers.py  widgets.py
src/storm/: __init__.py  denoise.py  detect.py  track.py  utils.py
tests/: conftest.py  test_detect.py  test_integration.py  test_track.py
(+29 files in other folders)
