[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "storm"
version = "0.1.0"
description = "Source Tracking via Optical-flow and Resolved Multiscale-wavelets"
authors = [{name = "Arnab Lahiry"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-image>=0.21",
    "scarlet2",
    "astropy>=5.0",
    "h5py>=3.8",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
denoise = []  # cosmostat/pycs must be installed manually (not on PyPI)

[project.scripts]
storm-detect = "storm.detect:main"
storm-track  = "storm.track:main"
storm-denoise = "storm.denoise:main"

[tool.setuptools.packages.find]
where = ["src"]
